--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,9 @@
   --color-white: #fff9f9;
   --color-light-green: #76de37;
   --color-gray: #EBEBEB;
+  --color-smoky-gray: #F4F4F4;
+  --color-grey: #D9D9D933;
+   --color-red: #FF0000;
+  --color-green: #61FF00;
+  --color-blue: #5D7DF0;
 }
